--- a/FirstResponse/Config/DefaultEngine.ini
+++ b/FirstResponse/Config/DefaultEngine.ini
@@ -3,12 +3,17 @@ GameName=FirstResponse
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/TimeTravellerOfDubai.TimeTravellerOfDubai
-GameDefaultMap=/Game/TimeTravellerOfDubai.TimeTravellerOfDubai
-TransitionMap=
+LocalMapOptions=
+TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/TimeTravellerOfDubai.TimeTravellerOfDubai
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Script/Engine.GameMode
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
