--- a/FirstResponse/Config/DefaultEngine.ini
+++ b/FirstResponse/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=FirstResponse
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TimeTravellerOfDubai.TimeTravellerOfDubai
+EditorStartupMap=/Game/FirstResponse.FirstResponse
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -11,7 +11,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/TimeTravellerOfDubai.TimeTravellerOfDubai
+GameDefaultMap=/Game/FirstResponse.FirstResponse
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameMode
 GlobalDefaultServerGameMode=None
