Main Menu Touches and Build testing

--- a/FirstResponse/Config/DefaultEngine.ini
+++ b/FirstResponse/Config/DefaultEngine.ini
@@ -2,17 +2,17 @@
 GameName=FirstResponse
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/FirstResponse.FirstResponse
+EditorStartupMap=/Game/FirstResponseMainMenu.FirstResponseMainMenu
 LocalMapOptions=
-TransitionMap=None
+TransitionMap=/Game/FirstResponseMainMenu.FirstResponseMainMenu
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/FirstResponse.FirstResponse
-ServerDefaultMap=/Engine/Maps/Entry.Entry
+GameDefaultMap=/Game/FirstResponseMainMenu.FirstResponseMainMenu
+ServerDefaultMap=/Game/FirstResponseMainMenu.FirstResponseMainMenu
 GlobalDefaultGameMode=/Script/Engine.GameMode
 GlobalDefaultServerGameMode=None
 
@@ -79,6 +79,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/FirstResponse")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/FirstResponse")
+GameViewportClientClassName=/Script/Engine.GameViewportClient
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -93,9 +94,6 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
-
-[/Script/DLSS.DLSSSettings]
-bEnableDLSSInEditorViewports=True
 
 [/Script/Engine.CollisionProfile]
 +Profiles=(Name="WaterBodyCollision",CollisionEnabled=QueryOnly,bCanModify=False,ObjectTypeName="",CustomResponses=((Channel="WorldDynamic",Response=ECR_Overlap),(Channel="Pawn",Response=ECR_Overlap),(Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore),(Channel="PhysicsBody",Response=ECR_Overlap),(Channel="Vehicle",Response=ECR_Overlap),(Channel="Destructible",Response=ECR_Overlap)),HelpMessage="Default Water Collision Profile (Created by Water Plugin)")
